assets/css/style.css
/* 
font-family: 'Barlow Condensed', sans-serif;
Menu = font-family: 'Berkshire Swash', cursive;
font-family: 'Josefin Slab', serif;
Body = font-family: 'Open Sans Condensed', sans-serif; */

:root {
    --snow: #FFFAFA;
    --mustard-yellow: #DAA520;
    --oxblood: #4A0000;
    --teal: #08504A;
}

body {
    background-color: var(--snow);
    font-family: 'Open Sans Condensed', sans-serif;
}

/* Nav Bar Style Start */
#navbar {
    width: 100%;
    height: 100px;
    background-color: var(--snow);
    border-top: 5px solid var(--oxblood);
    box-shadow: 0 4px 2px -2px #E0E0E0;
    position: sticky;
    top: 0;
    z-index: 1;
}

.logo {
    width: 60px;
    float: left;
    margin-left: 50px;
}

.navbar-nav {
    display: block;
    float: right;
    list-style-type: none;
    margin: 0;
    padding: 0;
    width: 500px;
    overflow: hidden;
    text-align: center;
    margin-top: 30px;
    margin-bottom: 20px;
    padding-top: 10px;
    padding-bottom: 15px;
}

.nav-item {
    display: inline;
    font-family: 'Barlow Condensed', sans-serif;
    text-align: center;
    margin: 15px;
    padding: 15px;
}

.nav-item:hover {
    font-weight: bold;
    color-adjust: var(--mustard-yellow);
}

.nav-link {
    text-decoration: none;
    text-transform: uppercase;
    font-size: 20px;
    color: #000000;
}

/* Nav Bar Style End */

/* Hero Style Start */
.hero-container {
    width: 100%;
    height: 80vh;
    background-image: url("../images/hero-image-2000x1125.png");
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

.hero-text {
    margin: auto;
    width: 50%;
    text-align: center;
    padding-top: 30vh;
}

.hero-title {
    font-family: 'Josefin Slab', serif;
    font-size: 100px;
}

.hero-sub-title {
    text-transform: uppercase;
    font-size: 25px;
}

/* Hero Style End */

/* About Style Start */
.about-me {
    width: 100%;
    height: 60vh;
    background-image: url("../images/about-image-2000x625.png");
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

.about-text {
    margin: auto;
    width: 50%;
    text-align: center;
    padding-top: 20vh;
}

.about-picture {
    height: 150px;
    border-radius: 150px;
    padding-top: 10px;
    padding-bottom: 10px;
}
.about-title {
    text-transform: uppercase;
    font-size: 55px;
    padding-bottom: 10px
}

.about-content {
    font-size: 20px;
    line-height: 1.8;
}

/* About Style End */

/* Portfolio Style Start */
.portfolio-container {
    width: 100%;
    height: 100vh;
    background-image: url("../images/portfolio-image-1600x800.png");
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
    overflow: hidden;
}

.portfolio-title {
    margin: auto;
    width: 50%;
    text-align: center;
    padding-top: 15vh;
}

.portfolio-title h2 {
    text-transform: uppercase;
    font-size: 55px;
    padding-bottom: 15px;
}

.portfolio-section {
    margin: auto;
    max-width: 960px;
    height: 600px;
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    grid-template-rows: 20% 20% 20% 20% 20%;
}

.portfolio-item {
    padding: 1em;
    border: 1px solid black;
    grid-gap: 10px;
    margin: 10px;
    position: relative;
    opacity: 1.0
}

.portfolio-item:hover {
    box-shadow: 5px 5px var(--mustard-yellow);
    
} 

.portfolio-link {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}

.first-item {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 5;
    background-image: url("../images/moodmusic.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.second-item {
    grid-column-start: 4;
    grid-column-end: 6;
    grid-row-start: 1;
    grid-row-end: 3;
    background-image: url("../images/horiseon-image.png");
    background-repeat: no-repeat;
    background-position: left top;
    background-size: cover;
}

.third-item {
    grid-column-start: 4;
    grid-column-end: 6;
    grid-row-start: 3;
    grid-row-end: 5;
    background-image: url("../images/run-buddy-image.png");
    background-repeat: no-repeat;
    background-position: left top;
    background-size: cover;
}

.portfolio-text {
    position: absolute;
    bottom: 0px;
    left: 0px;
    padding: 10px;
    background-color: rgb(0, 0, 0); 
    opacity: 0.6;
    color: var(--snow);
}

.item-title {
    font-size: 25px;
    padding-bottom: 5px
}
/* Portfolio Style End */

/* Contact Style Start */
.contact-container {
    width: 100%;
    height: 100vh;
    background-image: url("../images/contact-image-1600x800.png");
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
}

.contact-title {
    margin: auto;
    width: 50%;
    text-align: center;
    padding-top: 15vh;
}

.contact-title h2 {
    text-transform: uppercase;
    font-size: 55px;
    padding-bottom: 15px;
}

.contact-info {
    display: block;
    width: 50%;
    margin: auto;
    text-align: center;
}

.contact-area {
    display: inline-block;
    background-color: #F5F5F5;
    border-radius: 10px;
    margin: 20px;
    padding: 100px;
    width: 200px;
    height: auto;
}

.contact-area:hover {
    box-shadow: 10px 10px var(--teal);
}

.contact-text {
    font-size: 30px;
    padding-bottom: 10px;
}

.contact-link {
    font-size: 20px;
    text-decoration: none;
    color: #000000
}

.contact-link:hover {
    color: var(--teal);
}
/* Contact Style End */

/* Footer Style Start */
.footer-container {
    background-color: #757575;
    margin: 0;
    padding: 0;
    border: 5px solid #757575;
    text-align: center
}

.footer-text {
    color: var(--snow);
    padding: 20px;
}
/* Footer Style End */

/* Media Queries */

@media screen and (max-width: 1600px) {

    /* Hero Style Start */
    .hero-container {
        height: 800px;
        background-image: url("../images/hero-image-1600x800.png")
    }

    /* About Style Start */
    .about-me {
        height: 600px
    }

    /* Contact Style Start */
    .contact-info {
        width: 800px;
    }

    .contact-area {
        padding: 50px;
        width: 150px;
    }
}

@media screen and (max-width: 1200px) {
    /* Hero Style Start */
    .hero-container {
        height: 800px;
        background-image: url("../images/hero-image-1200x800.png");
    }

    .hero-text {
        padding-top: 20vh;
    }

    /* About Style Start */
    .about-me {
        height: 800px;
        background-image: url("../images/about-image-1200x800.png")
    }

    .about-text {
        width: 30%;
        padding-top: 10vh 
    }

    /* Portfolio Style Start */
    .portfolio-container {
        height: 800px;
        background-image: url("../images/portfolio-image-1200x800.png")
    }

    /* Contact Style Start */
    .contact-container {
        height: 800px;
        background-image: url("../images/contact-image-1200x800.png")
    }

    .contact-info {
        width: 800px;
    }

    .contact-area {
        padding: 50px;
        width: 150px;
    }    
}

@media screen and (max-width: 980px) {
    /* Hero Style Start */
    .hero-container {
        height: 600px;
        background-image: url("../images/hero-image-980x600.png");
    }

    .hero-text {
        padding-top: 20vh;
    }

    /* About Style Start */
    .about-me {
        height: 650px;
        background-image: url("../images/about-image-980x600.png")
    }

    .about-text {
        width: 40%;
        padding-top: 12vh;
    }

    /* Portfolio Style Start */
    .portfolio-container {
        height: 800px;
        background-image: url("../images/portfolio-image-980x800.png")
    }

    .portfolio-title {
        padding-top: 5vh;
    }

    /* Contact Style Start */
    .contact-container {
        height: 800px;
        background-image: url("../images/contact-image-980x800.png")
    }

    .contact-info {
        width: 800px;
    }

    .contact-area {
        padding: 50px;
        width: 150px;
    }
}

@media screen and (max-width: 768px) {
    /* Hero Style Start */
    .hero-container {
        height: 750px;
        background-image: url("../images/hero-image-768x750.png")
    }

    /* About Style Start */
    .about-me {
        height: 800px;
    }

    /* Portfolio Style Start */
    .portfolio-container {
        height: 650px;
        background-image: url("../images/portfolio-image-768x650.png")
    }
    
}

@media screen and (max-width: 575px) {
    /* Nav Bar Style Start */
    .navbar-nav {
        width: 300px;
    }

    .nav-item {
        margin: 5px;
        padding: 5px;
    }
    .nav-link {
        font-size: 20px;
    }

    /* Hero Style Start */
    .hero-container {
        width: 100%
    }

    /* About Style Start */
    .about-me {
        height: 1000px;
        background-image: url("../images/about-image-575x800.png")
    }

    /* Contact Style Start */
    .contact-info {
        width: 400px;
    }

    .contact-container {
        height: 1000px;
    }
    
}

@media screen and (max-width: 380px) {
    /* Nav Bar Style Start */
    .logo {
        margin-left: 5px;
    }

    .navbar-nav {
        width: 250px;
    }

    /* Hero Style Start */
    .hero-text {
        width: 70%
    }

    .hero-title {
        font-size: 80px
    }

    /* About Style Start */
    .about-text {
        width: 70%
    }

    /* Contact Style Start */
    .contact-container {
        height: 1100px;
    }

}

